k8s/strategy-2-decoupled/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gvs-api-service
  namespace: default
  labels:
    app.kubernetes.io/name: gvs-api
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: gvs-api
